src/test/data/tests/chapter_17/invalid_types/void/assign_void_rval.c
void f(void){
    return;
}

/* can't convert void to another type by assignment */
int main(void) {
  int a = 10;
  a = f();
  return 0;
}
